refact: levantamento de unidades de medida das colunas

--- a/LuisFillipeEmidio_RM559976_fase3_cap14.ipynb
+++ b/LuisFillipeEmidio_RM559976_fase3_cap14.ipynb
@@ -203,15 +203,15 @@
     "#### 1.2.2. Entendendo os dados\n",
     "\n",
     "**Variáveis numéricas discretas**\n",
-    "- N: concentração de potássio\n",
-    "- P: concentração de fósforo\n",
-    "- K: concentração de potássio\n",
+    "- N: concentração de potássio (unidade não informada)\n",
+    "- P: concentração de fósforo (unidade não informada)\n",
+    "- K: concentração de potássio (unidade não informada)\n",
     "\n",
     "**Variáveis numéricas contínuas**\n",
-    "- temperature: temperatura\n",
-    "- humidity: umidade\n",
+    "- temperature: temperatura (ºC)\n",
+    "- humidity: umidade (%)\n",
     "- ph: H do solo\n",
-    "- rainfall: quantidade de precipitação\n",
+    "- rainfall: quantidade de precipitação (mm)\n",
     "\n",
     "**Variaveis categóricas**\n",
     "- label: cultura agrícola\n"
